# pghoard

./: .buildinfo  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .style.yapf  .travis.yml  CODE_OF_CONDUCT.md  MANIFEST.in  Makefile  NEWS  README.md  README.rst  SECURITY.md  TODO  Vagrantfile  about.html  architecture.html  codecov.yml  commands.html  configuration.html  constraints.txt  development.html  genindex.html  index.html  install.html  monitoring.html  mypy.ini  objects.inv  pghoard-local-minimal.json  pghoard.json  pghoard.spec  pghoard.unit  pyproject.toml  quickstart.html  requirements-zstd.txt  requirements.dev.txt  requirements.txt  search.html  (+4 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_question.md  02_bug.md  03_feature.md  config.yml
.github/workflows/: build.yml  codeql-analysis.yml  sphinx.yml  sync-main-and-master.yml
_sources/: development.rst.txt  index.rst.txt  install.rst.txt  quickstart.rst.txt
_static/: documentation_options.js
debian/: changelog.in  control  copyright  pghoard.postinst  rules
docs/: about.rst  architecture.rst  commands.rst  conf.py  configuration.rst  development.rst  index.rst  install.rst  monitoring.rst  quickstart.rst
golang/: pghoard_postgres_command_go.go
pghoard/: .gitignore  __init__.py  __main__.py  archive_cleanup.py  archive_command.py  archive_sync.py  basebackup.py  basebackup_delta.py  common.py  compressor.py  config.py  create_keys.py  encryptor.py  errors.py  fetcher.py  gnutaremu.py  inotify.py  logutil.py  mapping.py  metrics.py  object_store.py  patchedtarfile.py  pghoard.py  pgutil.py  postgres_command.py  preservation_request.py  receivexlog.py  restore.py  statsd.py  transfer.py  wal.py  walreceiver.py  webserver.py
pghoard/basebackup/: __init__.py  base.py  chunks.py  delta.py
pghoard/monitoring/: __init__.py  base.py  prometheus.py  pushgateway.py  sentry.py  statsd.py
pghoard/object_storage/: __init__.py  azure.py  base.py  google.py  local.py  s3.py
pghoard/rohmu/: __init__.py  compat.py  compressor.py  dates.py  encryptor.py  errors.py  filewrap.py  inotify.py  rohmufile.py  snappyfile.py  zstdfile.py
pghoard/rohmu/delta/: __init__.py  common.py  snapshot.py
pghoard/rohmu/object_storage/: azure.py  base.py  google.py  local.py  rclone.py  s3.py  sftp.py  swift.py
test/: .gitignore  base.py  conftest.py  tar_failer  test.tar  test_archive_cleanup.py  test_archivesync.py  test_basebackup.py  test_common.py  test_compressor.py  test_config.py  test_connectivity_issues.py  test_create_keys.py  test_createkeys.py  test_encryptor.py  test_fetcher.py  test_gnutaremu.py  test_inotify.py  test_object_store.py  test_operation_event_progress_tracker.py  test_pghoard.py  test_pgutil.py  test_postgres_command.py  test_preservation_request.py  test_restore.py  test_rohmu.py  test_rohmu_dates.py  test_rohmu_delta.py  test_storage.py  test_transferagent.py  test_wal.py  test_wal_file_deleter.py  test_walreceiver.py  test_webserver.py  test_webserver_ipv6.py  transfer_lib.py  util.py
test/basebackup/: test_basebackup.py  test_chunks.py  test_delta.py
test/basebackup/chunks/: 00000002.pghoard.metadata  00000003.pghoard  00000003.pghoard.metadata
test/basebackup_delta/: config.json
test/basebackup_one_chunk/: config.json
test/basebackup_with_ts/: config.json
test/basebackup_with_ts/chunks/: chunk_2018-04-23_2__2018-04-23_2.00000570.pghoard.metadata  chunk_2018-04-23_2__2018-04-23_2.00000572.pghoard  chunk_2018-04-23_2__2018-04-23_2.00000572.pghoard.metadata  chunk_2018-04-23_2__2018-04-23_2.00000573.pghoard  chunk_2018-04-23_2__2018-04-23_2.00000573.pghoard.metadata
test/data/basebackup/: config.json
test/data/basebackup/chunks/: 00000001.pghoard  00000003.pghoard.metadata  00000004.pghoard
test/data/basebackup_delta/: config.json
test/data/basebackup_one_chunk/chunks/: 00000002.pghoard  00000002.pghoard.metadata
test/data/basebackup_with_ts/: config.json
test/data/basebackup_with_ts/chunks/: chunk_2018-04-23_2__2018-04-23_2.00000570.pghoard  chunk_2018-04-23_2__2018-04-23_2.00000570.pghoard.metadata  chunk_2018-04-23_2__2018-04-23_2.00000572.pghoard.metadata  chunk_2018-04-23_2__2018-04-23_2.00000573.pghoard.metadata
test/monitoring/: conftest.py  test_prometheus.py  test_pushgateway.py  test_sentry.py  test_statsd.py
