[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pghoard"
authors = [
  { name="Aiven", email="opensource@aiven.io" },
  { name="Hannu Valtonen", email="hannu.valtonen@ohmu.fi" }
]
description = "PostgreSQL automatic backup/restore service daemon."
readme = "README.rst"
requires-python = ">=3.8"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries",
]
license = { text = "Apache License 2.0" }
dynamic = ["version"]
dependencies = [
    "cryptography",
    "psycopg2-binary >= 2.8.0",
    "pydantic",
    "python-dateutil",
    "python-snappy >= 0.5",
    "python-systemd",
    "requests >= 1.2.0",
    "rohmu >= 1.0.7",
    "zstandard >= 0.11.1",
]

[project.optional-dependencies]
dev = [
    "boto3",
    "mock",
    "mypy",
    "pylint>=2.4.3,<=2.7.2",
    "pylint-quotes",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
    "pytest-xdist",
    "yapf==0.30.0",
    "isort==5.7.0",
    "coverage",
    "coveralls",
    "freezegun>=1.2",
    "responses",
    "unify",
    "types-botocore",
    "types-httplib2",
    "types-mock",
    "types-paramiko",
    "types-psycopg2",
    "types-python-dateutil",
    "types-requests",
    "types-six",
    "sentry-sdk",
]
constraints = [
    "astroid==2.5.8",
    "attrs==22.2.0",
    "azure-core==1.26.3",
    "azure-storage-blob==12.15.0",
    "bcrypt==4.0.1",
    "boto3==1.26.96",
    "botocore==1.29.96",
    "botocore-stubs==1.29.96",
    "cachetools==5.3.0",
    "certifi==2022.12.7",
    "cffi==1.16.0",
    "charset-normalizer==3.1.0",
    "coverage==6.5.0",
    "coveralls==3.3.1",
    "cryptography==39.0.2",
    "docopt==0.6.2",
    "exceptiongroup==1.1.1",
    "execnet==1.9.0",
    "freezegun==1.2.2",
    "google-api-core==2.11.0",
    "google-api-python-client==2.82.0",
    "googleapis-common-protos==1.59.0",
    "google-auth==2.16.2",
    "google-auth-httplib2==0.1.0",
    "httplib2==0.21.0",
    "idna==3.4",
    "iniconfig==2.0.0",
    "isodate==0.6.1",
    "isort==5.7.0",
    "jmespath==1.0.1",
    "lazy-object-proxy==1.9.0",
    "mccabe==0.6.1",
    "mock==5.0.1",
    "mypy==1.1.1",
    "mypy-extensions==1.0.0",
    "oauth2client==4.1.3",
    "packaging==23.0",
    "paramiko==3.1.0",
    "pluggy==1.0.0",
    "protobuf==4.22.1",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pycparser==2.21",
    "pydantic==1.10.14",
    "pylint==2.7.2",
    "pylint-quotes==0.2.1",
    "PyNaCl==1.5.0",
    "pyparsing==3.0.9",
    "pytest==7.2.2",
    "pytest-cov==4.0.0",
    "pytest-mock==3.10.0",
    "pytest-timeout==2.1.0",
    "pytest-xdist==3.2.1",
    "python-dateutil==2.8.2",
    "python-snappy==0.7.1",
    "python-systemd==0.0.9",
    "requests==2.28.2",
    "responses==0.23.1",
    "rohmu==2.3.0",
    "rsa==4.9",
    "s3transfer==0.6.0",
    "six==1.16.0",
    "toml==0.10.2",
    "tomli==2.0.1",
    "types-awscrt==0.16.13",
    "types-botocore==1.0.2",
    "types-httplib2==0.21.0.5",
    "types-mock==5.0.0.5",
    "types-paramiko==3.0.0.4",
    "types-psycopg2==2.9.21.8",
    "types-python-dateutil==2.8.19.10",
    "types-PyYAML==6.0.12.8",
    "types-requests==2.28.11.15",
    "types-six==1.16.21.7",
    "types-urllib3==1.26.25.8",
    "typing_extensions==4.7.1",
    "unify==0.5",
    "untokenize==0.1.1",
    "uritemplate==4.1.1",
    "urllib3==1.26.15",
    "wrapt==1.12.1",
    "yapf==0.30.0",
    "zstandard==0.22.0",
]

[project.urls]
"Homepage" = "https://github.com/Aiven-Open/pghoard/"
"Bug Tracker" = "https://github.com/Aiven-Open/pghoard/issues"

[project.scripts]
pghoard = "pghoard.pghoard:main"
pghoard_archive_cleanup = "pghoard.archive_cleanup:main"
pghoard_archive_sync = "pghoard.archive_sync:main"
pghoard_create_keys = "pghoard.create_keys:main"
pghoard_gnutaremu = "pghoard.gnutaremu:main"
pghoard_postgres_command = "pghoard.postgres_command:main"
pghoard_restore = "pghoard.restore:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pghoard/version.py"
